Fixed bug #34678 (__call(), is_callable() and static methods)